# clang-sys

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md  appveyor.yml  build.rs  docs.py
.github/workflows/: ci.yml  ssh.yml
bindgen-test/: Cargo.toml  build.rs  wrapper.h
bindgen-test/src/: main.rs
ci/: before_install.sh  script.sh  test_script.bat  test_script.ps1
src/: documentation.rs  lib.rs  link.rs  support.rs
tests/: build.rs  lib.rs
