[package]

name = "clang-sys"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.6.0"

readme = "README.md"
license = "Apache-2.0"

description = "Rust bindings for libclang."

documentation = "https://kylemayes.github.io/clang-sys/3_5/clang_sys"
repository = "https://github.com/KyleMayes/clang-sys"

build = "build.rs"

[features]

clang_3_5 = []
clang_3_6 = ["gte_clang_3_6"]
clang_3_7 = ["gte_clang_3_6", "gte_clang_3_7"]
clang_3_8 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]

gte_clang_3_6 = []
gte_clang_3_7 = []
gte_clang_3_8 = []

static = []

[dependencies]

bitflags = "0.7.0"
libc = "0.2.11"

[build-dependencies]

glob = "0.2.11"
