[package]

name = "clang-sys"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.29.1"

readme = "README.md"
license = "Apache-2.0"

description = "Rust bindings for libclang."

documentation = "https://kylemayes.github.io/clang-sys/3_5/clang_sys"
repository = "https://github.com/KyleMayes/clang-sys"

links = "clang"
build = "build.rs"

[features]

clang_3_5 = []
clang_3_6 = ["gte_clang_3_6"]
clang_3_7 = ["gte_clang_3_6", "gte_clang_3_7"]
clang_3_8 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8"]
clang_3_9 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9"]
clang_4_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0"]
clang_5_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0"]
clang_6_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0"]
clang_7_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0"]
clang_8_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0", "gte_clang_8_0"]
clang_9_0 = ["gte_clang_3_6", "gte_clang_3_7", "gte_clang_3_8", "gte_clang_3_9", "gte_clang_4_0", "gte_clang_5_0", "gte_clang_6_0", "gte_clang_7_0", "gte_clang_8_0", "gte_clang_9_0"]

gte_clang_3_6 = []
gte_clang_3_7 = []
gte_clang_3_8 = []
gte_clang_3_9 = []
gte_clang_4_0 = []
gte_clang_5_0 = []
gte_clang_6_0 = []
gte_clang_7_0 = []
gte_clang_8_0 = []
gte_clang_9_0 = []

runtime = ["libloading"]
static = []

[dependencies]

glob = "0.3"
libc = { version = "0.2.66", default-features = false }
libloading = { version = "0.5.2", optional = true }

[build-dependencies]

glob = "0.3"
