[package]

name = "clang-sys-bindgen-test"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "1.5.1"

readme = "README.md"
license = "Apache-2.0"

description = "Tests clang-sys by compiling and using bindgen."

documentation = "https://docs.rs/clang-sys"
repository = "https://github.com/KyleMayes/clang-sys"

build = "build.rs"

[build-dependencies]

bindgen = "*"

[patch.crates-io]

clang-sys = { path = ".." }
